# quart-libretranslate

./: .gitignore  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: conf.py  index.rst  requirements.txt
docs/references/: api.rst  changelog.rst  cheatsheet.rst  configuration.rst  contributing.rst  index.rst  installation.rst  logo.rst
quart_libretranslate/: __init__.py  core.py  error.py  extension.py  wrappers.py
tests/: conftest.py  test_general.py  test_translate.py  test_wrappers.py
