[tool.poetry]
name = "quart-extension"
version = "0.0.1"
description = "A VS Code dev container for developing quart extensions."
authors = ["Chris Rood <quart.addons@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "quart_ext, tests"
line_length = 100
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
order_by_type = false
reverse_relative = true

[tool.mypy]
allow_redefinition = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = true
implicit_reexport = true
no_implicit_optional = true
show_error_codes = true
strict = true
strict_equality = true
strict_optional = false
warn_redundant_casts = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.19.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
Sphinx = ">=3.4 <6.0.0"
pydata-sphinx-theme = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
